--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 h2 {
-  color: white;
-  background-color: rgb(190,35,35);
+  color: rgb(255,255,255);
+  background-color: rgb(0,0,0);
   margins: 0;
-  font-style: timesnewroman;
+  font-style: fantasy;
+  alignment: left;
 }
