--- a/index.css
+++ b/index.css
@@ -17,7 +17,12 @@
 
 .image-one {
   float: right;
-  margin-left: 10px;
+  margin-left: 10px
 }
 
-
+.hd2cont {
+  background-color: black;
+  color: white;
+  text-align: center;
+  padding: 20px
+}
