--- a/index.css
+++ b/index.css
@@ -8,7 +8,6 @@
 
 .first-list {
   display: flex;
-  justify-content: space-between;
   background-color: red;
   color: black;
   padding: 20px;
@@ -17,7 +16,7 @@
   alignment: left
 }
 
-.image-one {
+.image-two {
   float: right;
   margin-left: 25px;
   margin-right: 5px;
