--- a/index.css
+++ b/index.css
@@ -16,7 +16,7 @@
   alignment: left
 }
 
-.image-two {
+.img2 {
   float: right;
   margin-left: 25px;
   margin-right: 5px;
@@ -47,3 +47,6 @@
   border-radius: 5px;
   cursor: pointer;
 }
+
+.img2 {
+  
