--- a/index.css
+++ b/index.css
@@ -52,5 +52,7 @@
   float: right;
   margin-left: 25px;
   margin-right: 5px;
-  alignment: right
+  alignment: right;
+  width: 50%;
+  heigth: 50%;
 }
