--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@
   background-color: rgb(0,0,0);
   margins: 0;
   font-style: fantasy;
-  alignment: left;
+  text-align: left;
 }
 
 .first-list {
@@ -12,16 +12,15 @@
   color: black;
   padding: 20px;
   text-align: left;
-  align-items: right;
-  alignment: left
+  justify-content: space-between;
+  align-items: center;
 }
 
 .img2 {
   float: right;
-  margin-left: 50px;
-  margin-right: 5px;
-  alignment: right
+  margin-left: auto;
 }
+
 
 .hd2cont {
   background-color: black;
