--- a/index.css
+++ b/index.css
@@ -51,7 +51,7 @@
   float: right;
   margin-left: 25px;
   margin-right: 5px;
-  alignment: right;
+  align-items: right;
   width: 95%;
   heigth: 95%;
 }
