--- a/index.css
+++ b/index.css
@@ -12,7 +12,7 @@
   color: black;
   padding: 20px;
   text-align: left;
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: center;
 }
 
